feat: print WiFiPort settings in setLinkPreference response
